# coffee-guide-backend

./: .env.example  .gitignore  Coffee_guide.json  README.md  clean.py  credentials.json  docker-compose.production.yml  docker-compose.yml  pyproject.toml  quickstart.py  token.json
coffee_guide/: .pre-commit-config.yaml  Dockerfile  manage.py  pyproject.toml  token.json
coffee_guide/api/: filters.py  permissions.py  urls.py  utils.py
coffee_guide/api/serializers/: cafe.py  ratings.py  reviews.py
coffee_guide/api/views/: cafe.py  reviews.py
coffee_guide/cafe/: admin.py  models.py  models_backup.py
coffee_guide/cafe/migrations/: 0001_initial.py  0002_alter_cafe_name.py  0002_alter_imagecafe_image_url.py  0002_initial.py  0002_metro_cafe_metro.py  0002_remove_cafe_stop_factors_cafe_stop_factors.py  0003_alter_additional_options_alter_address_options_and_more.py  0003_alter_cafe_image_alter_cafe_organization_and_more.py  0003_remove_address_district.py  0004_alter_address_name.py  (+9 more)
coffee_guide/coffee_guide/: asgi.py  settings.py  urls.py  wsgi.py
coffee_guide/data/: Coffee_guide.json  additionally.json  alternative.json  available.json  clean_address.json  drink.json  roaster.json  schedule.json  tag.json
coffee_guide/docs/: redoc.html
coffee_guide/ratings/: admin.py  models.py
coffee_guide/reviews/: admin.py  models.py
coffee_guide/tests/: tests.py
coffee_guide/users/: admin.py  backends.py  gmail_utils.py  models.py  pipelines.py  serializers.py  urls.py  user_managers.py  views.py
frontend/: Dockerfile
nginx/: nginx.conf
(+12 files in other folders)
