[tool.poetry]
name = "coffee-guide-backend"
version = "0.1.0"
description = "Веб-сервис Кофейный гид"
authors = ["-"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.8"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
djoser = "^2.2.2"
pillow = "^10.1.0"



[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
